@@ -3,6 +3,11 @@
 	* netfs.c: Add #include <sys/mman.h> for munmap decl.
 	* ccache.c: Likewise.
 
+1999-07-09  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* ccache.c (ccache_read): Use mmap instead of vm_allocate.
+	* netfs.c (get_dirents): Likewise.
+
 1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>
 
 	* ccache.c (ccache_read): Use munmap instead of vm_deallocate.
